5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1675_2473.log
== TEST (2019-05-01 17:54:07) 
-- CODE:
ano=int(input())
a=ano%19
b=ano%4
c=ano%7
d=(19*a+24)%30
e=(2*b+4*c+6*d+5)%7

if(ano>=1900 and ano<=2099):
	if(ano!=1954 and ano!=1981 and ano!=2049 and ano!=2076):
		dia=22+d+e
		mes=3
		if(dia>31):
			dia=dia-31
			mes=4
		else:
			dia=dia
			mes=mes
		print(dia,"-",mes,"-"ano)
		

-- ERROR:
File "XXXX", line 18
    print(dia,"-",mes,"-"ano)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:54:49) 
-- CODE:
ano=int(input())
a=ano%19
b=ano%4
c=ano%7
d=(19*a+24)%30
e=(2*b+4*c+6*d+5)%7

if(ano>=1900 and ano<=2099):
	if(ano!=1954 and ano!=1981 and ano!=2049 and ano!=2076):
		dia=22+d+e
		mes=3
		if(dia>31):
			dia=dia-31
			mes=4
		else:
			dia=dia
			mes=mes
		print(dia,"-",mes,"-",ano)
		

-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 17:56:08) 
-- CODE:
ano=int(input())
a=ano%19
b=ano%4
c=ano%7
d=(19*a+24)%30
e=(2*b+4*c+6*d+5)%7

if(ano>=1900 and ano<=2099):
	if(ano!=1954 and ano!=1981 and ano!=2049 and ano!=2076):
		dia=22+d+e
		mes=3
		if(dia>31):
			dia=dia-31
			mes=4
		else:
			dia=dia
			mes=mes
		print(dia,"-",mes,"-",ano)
	else:
		dia=22+d+e+7
		mes=3
		if(dia>31):
			dia=dia-31
			mes=4
		else:
			dia=dia
			mes=mes
		print(dia,"-",mes,"-",ano)

-- EXECUTION TIME:
0.15351
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
33 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:56:13) 
-- CODE:
ano=int(input())
a=ano%19
b=ano%4
c=ano%7
d=(19*a+24)%30
e=(2*b+4*c+6*d+5)%7

if(ano>=1900 and ano<=2099):
	if(ano!=1954 and ano!=1981 and ano!=2049 and ano!=2076):
		dia=22+d+e
		mes=3
		if(dia>31):
			dia=dia-31
			mes=4
		else:
			dia=dia
			mes=mes
		print(dia,"-",mes,"-",ano)
	else:
		dia=22+d+e+7
		mes=3
		if(dia>31):
			dia=dia-31
			mes=4
		else:
			dia=dia
			mes=mes
		print(dia,"-",mes,"-",ano)

-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:00:49) 
-- CODE:
ano=int(input())
a=ano%19
b=ano%4
c=ano%7
d=(19*a+24)%30
e=(2*b+4*c+6*d+5)%7

if(ano>=1900 and ano<=2099):
	if(ano!=1954 and ano!=1981 and ano!=2049 and ano!=2076):
		dia=22+d+e
		mes=3
		if(dia>31):
			dia=dia-31
			mes=4
		else:
			dia=dia
			mes=mes
		print(dia,"-",mes,"-",ano)
	else:
		dia=22+d+e
		mes=3
		if(dia>31):
			dia=dia-31+7
			mes=4
		else:
			dia=dia
			mes=mes
		print(dia,"-",mes,"-",ano)

-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:01:13) 
-- CODE:
ano=int(input())
a=ano%19
b=ano%4
c=ano%7
d=(19*a+24)%30
e=(2*b+4*c+6*d+5)%7

if(ano>=1900 and ano<=2099):
	if(ano!=1954 and ano!=1981 and ano!=2049 and ano!=2076):
		dia=22+d+e
		mes=3
		if(dia>31):
			dia=dia-31
			mes=4
		else:
			dia=dia
			mes=mes
		print(dia,"-",mes,"-",ano)
	else:
		dia=22+d+e
		mes=3
		if(dia>31):
			dia=dia-31
			mes=4
		else:
			dia=dia
			mes=mes
		print(dia,"-",mes,"-",ano)

-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:01:40) 
-- CODE:
ano=int(input())
a=ano%19
b=ano%4
c=ano%7
d=(19*a+24)%30
e=(2*b+4*c+6*d+5)%7

if(ano>=1900 and ano<=2099):
	if(ano!=1954 and ano!=1981 and ano!=2049 and ano!=2076):
		dia=22+d+e
		mes=3
		if(dia>31):
			dia=dia-31
			mes=4
		else:
			dia=dia
			mes=mes
		print(dia,"-",mes,"-",ano)
	else:
		dia=22+d+e
		mes=3
		if(dia>31):
			dia=dia-31-7
			mes=4
		else:
			dia=dia
			mes=mes
		print(dia,"-",mes,"-",ano)

-- EXECUTION TIME:
0.179875
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:01:44) 
-- CODE:
ano=int(input())
a=ano%19
b=ano%4
c=ano%7
d=(19*a+24)%30
e=(2*b+4*c+6*d+5)%7

if(ano>=1900 and ano<=2099):
	if(ano!=1954 and ano!=1981 and ano!=2049 and ano!=2076):
		dia=22+d+e
		mes=3
		if(dia>31):
			dia=dia-31
			mes=4
		else:
			dia=dia
			mes=mes
		print(dia,"-",mes,"-",ano)
	else:
		dia=22+d+e
		mes=3
		if(dia>31):
			dia=dia-31-7
			mes=4
		else:
			dia=dia
			mes=mes
		print(dia,"-",mes,"-",ano)

-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:02:11) 
-- CODE:
ano=int(input())
a=ano%19
b=ano%4
c=ano%7
d=(19*a+24)%30
e=(2*b+4*c+6*d+5)%7

if(ano>1900 and ano<2099):
	if(ano!=1954 and ano!=1981 and ano!=2049 and ano!=2076):
		dia=22+d+e
		mes=3
		if(dia>31):
			dia=dia-31
			mes=4
		else:
			dia=dia
			mes=mes
		print(dia,"-",mes,"-",ano)
	else:
		dia=22+d+e
		mes=3
		if(dia>31):
			dia=dia-31-7
			mes=4
		else:
			dia=dia
			mes=mes
		print(dia,"-",mes,"-",ano)

-- EXECUTION TIME:
0.135916
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:02:15) 
-- CODE:
ano=int(input())
a=ano%19
b=ano%4
c=ano%7
d=(19*a+24)%30
e=(2*b+4*c+6*d+5)%7

if(ano>1900 and ano<2099):
	if(ano!=1954 and ano!=1981 and ano!=2049 and ano!=2076):
		dia=22+d+e
		mes=3
		if(dia>31):
			dia=dia-31
			mes=4
		else:
			dia=dia
			mes=mes
		print(dia,"-",mes,"-",ano)
	else:
		dia=22+d+e
		mes=3
		if(dia>31):
			dia=dia-31-7
			mes=4
		else:
			dia=dia
			mes=mes
		print(dia,"-",mes,"-",ano)

-- OUTPUT:
26 - 3 - 1978
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:03:08) 
-- CODE:
ano=int(input())
a=ano%19
b=ano%4
c=ano%7
d=(19*a+24)%30
e=(2*b+4*c+6*d+5)%7

if(ano>1900 and ano<2099):
	if(ano!=1954 and ano!=1981 and ano!=2049 and ano!=2076):
		dia=22+d+e
		mes=3
		if(dia>31):
			dia=dia-31
			mes=4
		else:
			dia=dia
			mes=mes
		print(dia,"-",mes,"-",ano)
	else:
		dia=22+d+e
		mes=3
		if(dia>31):
			dia=dia-31-7
			mes=4
		else:
			dia=dia
			mes=mes
		print(dia,"-",mes,"-",ano)
else:
	print("ano invalido")
-- EXECUTION TIME:
0.151046
-- TEST CASE 1:
---- input:
1978
---- correct output:
26  -  3  -  1978
---- user output:
26 - 3 - 1978
-- TEST CASE 2:
---- input:
1981
---- correct output:
19 - 4 - 1981
---- user output:
19 - 4 - 1981
-- TEST CASE 3:
---- input:
1800
---- correct output:
ano invalido
---- user output:
ano invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
